Hama Change Log

Trunk (unreleased changes)

  NEW FEATURES
    
    HAMA-81: Add subVector(int i0, int i1) to Vector interface (edwardyoon)
    Hama-80: Add identity(int m, int n) which returns identity matrix (edwardyoon) 
    HAMA-62: Hama Shell Implementation (samuel via edwardyoon)
    HAMA-61: Load / save matrices from HTable (edwardyoon)
    HAMA-51: Add get/setRowAttribute() method (edwardyoon)
    HAMA-13: Matrix multiplication (edwardyoon)
    HAMA-48: Add getColumn(int column) method which returns column vector (edwardyoon)
    HAMA-49: Add iterator() method to vector (edwardyoon)
    HAMA-43: Color Hama Logo (Morakot via chanwit)
    HAMA-37: Add forrest build to Hudson patch build script (edwardyoon)
    HAMA-34: Hudson/Jira Intergration (edward yoon)
    HAMA-36: Add svn information to website (edward yoon)
    HAMA-33: Add set() method (edwardyoon)
    HAMA-30: Add scaling method to Vector (edwardyoon)
    HAMA-25: Add matrix addition example (edwardyoon)
    HAMA-23: Add Hama configuration files (edwardyoon)
    HAMA-6: Add a 'who we are' page (edwardyoon)
    HAMA-7: Add some information for a new comer (edwardyoon)
    HAMA-1: Create the Hama web site (edwardyoon via Ian Holsman)
    HAMA-2: The intial donation of Hama from the google project (edwardyoon)
    
  IMPROVEMENTS
    
    HAMA-28: Implement Vector.add() method (edwardyoon)
    HAMA-78: Separate Interface and Implementation for HamaAdmin (edwardyoon)
    HAMA-76: Remove load() since it duplicated with constructor (edwardyoon)
    HAMA-74: set the number of map/reduce task on the shell (samuel)
    HAMA-73: Add setNumMap/ReduceTasks() to HamaConfiguration (edwardyoon)
    HAMA-60: Add an arguments for handle parallel degree to MatrixAddition (edwardyoon)
    HAMA-68: Shell parser JUnit test cases (samuel via edwardyoon)
    HAMA-65: Remove the information of an inactive committers (edwardyoon) 
    HAMA-58: Remove duplicated code (edwardyoon)